--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -6,9 +6,18 @@
   "version": "1.0",
 
   "permissions": ["tabs", "*://*.google.com/*"],
+  "browser_action": {
+	"default_popup": "site_handlers/common.html",
+	"default_icon": "icon-grid.png"
+  },
   "content_scripts": [
     {
       "matches": ["*://*.google.com/*"],
+
+        "browser_action": {
+		"default_popup": "site_handlers/dominos_co_in.html",
+		"default_icon": "icon-grid.png"
+	  },
       "js": ["lib/jquery-1.9.1.js", "lib/jquery.pnotify.min.js", "site_handlers/common.js", "site_handlers/dominos_co_in.js"],
       "css": ["lib/css/jquery.pnotify.default.css","lib/css/bootstrap.min.css"]
     }
