--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -24,12 +24,22 @@
   "content_scripts": [
     {
       "matches": ["*://*.dominos.co.in/*"],
-
+      "exclude_matches":["http://www.dominos.co.in/menu/side-orders/more/lebanese-rolls-veg"],
         "browser_action": {
 		"default_popup": "site_handlers/dominos_co_in.html",
 		"default_icon": "icon-grid.png"
 	  },
       "js": ["lib/jquery-1.9.1.js", "lib/jquery.pnotify.min.js", "site_handlers/common.js", "site_handlers/dominos_co_in.js"],
+      "css": ["lib/css/jquery.pnotify.default.css","lib/css/bootstrap.min.css"]
+    },
+    {
+      "matches": ["http://www.dominos.co.in/menu/side-orders/more/lebanese-rolls-veg"],
+      
+        "browser_action": {
+    "default_popup": "site_handlers/dom_in_leba.html",
+    "default_icon": "icon-grid.png"
+    },
+      "js": ["lib/jquery-1.9.1.js", "lib/jquery.pnotify.min.js", "site_handlers/common.js", "site_handlers/dom_in_leba.js"],
       "css": ["lib/css/jquery.pnotify.default.css","lib/css/bootstrap.min.css"]
     },
     {
