Moved from urllib2 to urllib

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,4 +7,4 @@ flask-sqlalchemy
 flask-social
 http://github.com/pythonforfacebook/facebook-sdk/tarball/master
 unirest
-https://github.com/ryanmcgrath/twython.git
+twython
